--- a/pages/property.html
+++ b/pages/property.html
@@ -17,7 +17,7 @@
 		<div class="mui-content property_main">
 			<!--无-->
 			<div class="property_card blue_bg" id="creat_dcar">
-				<span class="newact" url="/property/create-wallet.html">新建DCAR</span>
+				<span url="/property/create-wallet.html" id="createDcar">新建DCAR</span>
 				<span class="newact" url="/property/import-dcar.html">导入DCAR</span>
 			</div>
 			<div id="dcar_purse"></div>
@@ -62,6 +62,15 @@
 			mui.init();
 			showDcarPurse();
 			showEthPurse();
+			$("#createDcar").on("click", function(){
+				mui.openWindow({
+					id: "/property/create-wallet.html",
+					url: "/property/create-wallet.html",
+					extras: {
+						status: 0
+					}
+				})
+			})
 			//打开详情页
 			function go_detail(num, state) {
 				mui.openWindow({
