--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -53,23 +53,15 @@
 					$("#create").addClass("cannot")
 				}
 			})
-			$("#create").on("click", function() {
+			mui.plusReady(function() {
+				var self = plus.webview.currentWebview();
+				status = self.status;
+				alert(status)
+				$("#create").on("click", function() {
 				if($("#purseName").val() == "") {
 					mui.toast('钱包名称不能为空');
 					return false;
 				}
-//				if($("#pass").val() == "") {
-//					mui.toast('密码不能为空');
-//					return false;
-//				}
-//				if($("#ensurePass").val() == "") {
-//					mui.toast('请再次输入密码');
-//					return false;
-//				}
-//				if($("#pass").val() != $("#ensurePass").val()) {
-//					mui.toast('两次密码不一致');
-//					return false;
-//				}
 				if(!$("#isagree").is(":checked")) {
 					mui.toast('用户协议未勾选');
 					return false;
@@ -100,8 +92,11 @@
 								var timer = null;
 								clearTimeout(timer);
 								timer = setTimeout(function() {
-									plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
-									plus.webview.getWebviewById("/users/addOre.html").evalJS("getPurseName()");
+									if (status == 0) {
+										plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
+									} else if (status == 1) {
+										plus.webview.getWebviewById("/users/addOre.html").evalJS("getPurseName()");
+									}
 									plus.webview.currentWebview().close();
 								}, 1000);
 							} else {
@@ -113,36 +108,9 @@
 							mui.toast(error.responseJSON.msg);
 						}
 					});
-//					var time = null;
-//					clearTimeout(time);
-//					time = setTimeout(function() {
-//						var web3 = new Web3();
-//						// 用户输入密码
-//						var password = $("#pass").val();
-//						// 创建账户(生成私钥、地址)
-//						var account = web3.eth.accounts.create();
-//						// 根据用户输入的密码加密私钥，生成 Keystore 文件
-//						var keystore = JSON.stringify(account.encrypt(password));
-//						if(keystore) {
-//							mui.hideLoading();
-//							account.keystore = keystore;
-//							account.name = $("#purseName").val();
-//							// account.words = [];
-//							var arr = store.get('dcarPurse');
-//							arr.push(account);
-//							console.log(arr);
-//							store.set('dcarPurse', arr);
-//							mui.toast('钱包创建成功');
-//							var timer = null;
-//							clearTimeout(timer);
-//							timer = setTimeout(function() {
-//								plus.webview.getWebviewById("pages/property.html").evalJS("showDcarPurse()");
-//								plus.webview.currentWebview().close();
-//							}, 1000);
-//						}
-//					}, 10);
-				}, 1000)
-			})
+					}, 1000)
+				})
+			});
 		</script>
 	</body>
 
