--- a/property/create-wallet.html
+++ b/property/create-wallet.html
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="close_btn agreementDetail">关闭</div>
+			<div class="close_btn" id="closeAgreement">关闭</div>
 		</div>
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/markdown.js"></script>
