--- a/pages/mine.html
+++ b/pages/mine.html
@@ -68,7 +68,7 @@
 		<!--开机关机弹框-->
 		<div class="mui-popover alert_box">
 			<p class="alert_title">提示</p>
-			<div class="alert_body">确定要清除吗？清除后将没有钱包数据</div>
+			<div class="alert_body">确定要清除吗？清除后钱包数据不可恢复</div>
 			<ul class="alert_operate">
 				<li class="alert_button" id="sureConfirm">确定</li>
 				<li class="alert_button" onclick="showHide()">取消</li>
